<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroudcolor"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/dialogLayout"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="0dp">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:id="@+id/full_name_id"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ellipsize="start"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_menu_cc"
            android:paddingLeft="4dip"
            android:hint="@string/str_full_name"
            android:textColor="@color/textcolor"
            android:background="@drawable/edittextstyle"
            android:textSize="24dp"
            android:textStyle="normal|bold"
            android:inputType="text" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:id="@+id/email_id"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ellipsize="start"
            android:gravity="center"
            android:drawableLeft="@android:drawable/ic_dialog_email"
            android:paddingLeft="4dip"
            android:hint="@string/str_email"
            android:textColor="@color/textcolor"
            android:background="@drawable/edittextstyle"
            android:textSize="24dp"
            android:textStyle="normal|bold"
            android:inputType="text" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:id="@+id/userName_id"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ellipsize="start"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_menu_cc"
            android:paddingLeft="4dip"
            android:hint="@string/str_username"
            android:textColor="@color/textcolor"
            android:background="@drawable/edittextstyle"
            android:textSize="24dp"
            android:textStyle="normal|bold"
            android:inputType="text" />
        <EditText
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:id="@+id/password_id"
            android:hint="@string/str_pw"
            android:textColor="@color/textcolor"
            android:background="@drawable/edittextstyle"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ellipsize="start"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_login"
            android:paddingLeft="4dip"
            android:textStyle="normal|bold"
            android:textSize="24dp" />
    <!--android:drawableLeft="@android:drawable/ic_lock_lock"    android:inputType="textPassword"-->
        <TextView
            android:text="@string/str_wrong_usrpw"
            android:textColor="#FF0000"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:textSize="24dp"
            android:visibility="gone"
            android:id="@+id/txt_login_error" />
        <Button
            android:id="@+id/log_reg_btn"
            android:background="@drawable/action_item_btn"
            android:text="@string/str_login_reg"
            android:layout_width="200.0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="24dp"
            android:onClick="RegisterBtnClick"
            android:textStyle="normal|bold" />
    </LinearLayout>
</LinearLayout>
